2005-10-06  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Change AC_CONFIG_SRCDIR argument to src/gpgol.def.

2005-09-29  Werner Koch  <wk@g10code.com>

	Released 0.9.3.

2005-09-22  Werner Koch  <wk@g10code.com>

	Released 0.9.2.

2005-09-19  Werner Koch  <wk@g10code.com>

	Released 0.9.1.

2005-09-04  Werner Koch  <wk@g10code.com>

	Released 0.9.0. 

2005-08-30  Werner Koch  <wk@g10code.com>

	Renamed project to gpgol.

2005-08-14  Werner Koch  <wk@g10code.com>

	* configure.ac: Build src/versioninfo.rc.

2005-08-10  Werner Koch  <wk@g10code.com>

	* configure.ac: Check for and define DLLTOOL.
