@@ -1,3 +1,8 @@
+2005-10-21  Marcus Brinkmann  <marcus@g10code.de>
+
+	* m4/gpg-error.m4: New file.
+	* configure.ac: Also check for gpg-error.
+
 2005-10-06  Marcus Brinkmann  <marcus@g10code.de>
 
 	* configure.ac: Change AC_CONFIG_SRCDIR argument to src/gpgol.def.
